<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>myutils</groupId>
    <artifactId>myutils</artifactId>
    <version>1</version>
    <packaging>jar</packaging>

    <properties>
        <junit.version>5.5.0-M1</junit.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.google.code.findbugs</groupId>
            <artifactId>jsr305</artifactId>
            <version>3.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
	        <plugins>
	            <plugin>
	                <groupId>org.apache.maven.plugins</groupId>
	                <artifactId>maven-checkstyle-plugin</artifactId>
	                <version>3.0.0</version>
	                <dependencies>
	                    <dependency>
	                        <groupId>com.puppycrawl.tools</groupId>
	                        <artifactId>checkstyle</artifactId>
	                        <version>8.18</version>
	                    </dependency>
	                </dependencies>
	                <executions>
	                    <execution>
	                        <id>compile</id>
	                        <phase>compile</phase>
	                        <configuration>
	                            <configLocation>${project.basedir}/checkstyle/checks.xml</configLocation>
	                            <suppressionsLocation>${project.basedir}/checkstyle/suppressions.xml</suppressionsLocation>
	                            <encoding>UTF-8</encoding>
	                            <consoleOutput>true</consoleOutput>
	                            <violationSeverity>warning</violationSeverity>
	                            <failsOnError>true</failsOnError>
	                        </configuration>
	                        <goals>
	                            <goal>check</goal>
	                        </goals>
	                    </execution>
	                </executions>
	            </plugin>
	            <plugin>
	                <groupId>org.apache.maven.plugins</groupId>
	                <artifactId>maven-compiler-plugin</artifactId>
	                <version>3.8.0</version>
	                <configuration>
	                    <release>11</release>
	                </configuration>
	            </plugin>
	            <plugin>
	                <groupId>org.apache.maven.plugins</groupId>
	                <artifactId>maven-surefire-plugin</artifactId>
	                <version>3.0.0-M3</version>
	            </plugin>
	        </plugins>
        </pluginManagement>
    </build>

</project>
